<resources>
    <string name="app_name">HelpingEye</string>
    <string name="todo1">TODO</string>
    <string name="signupmainpage">SignUp</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="record_your_voice">Record your Voice</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="desc">your desc goes here</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_password">Enter Password</string>

    <string name="do_you_have_already_an_account">Do you have already an account?</string>
    <string name="signup">SignUp</string>
    <string name="todologinimage">TODO</string>
    <string name="select_photo">Select Photo</string>
    <string name="signuppagebtn">SignUp</string>
    <string name="i_agree_to_the_term_of_service">I agree to the Term of Service</string>
    <string name="todo2">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>

    <string name="about_us">About us</string>
    <string name="obstacle_detector">Obstacle Detector</string>
    <string name="contact">Contact</string>
    <string name="obstacle_detection">Obstacle Detection</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="alarm">Alarm</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_home_page_nav">HomePageNavActivity</string>
    <string name="title_activity_home_bottom_nav">homeBottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_homepage_bottom_nav">HomepageBottomNavActivity</string>

    //Main Activity
    <string name="buttonhelp">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap to Speak</string>

    //Needs Activity
    <string name="greet">Please fill in the details so i can Assist You</string>
    <string name="visually">Are You Visually Impaired ?</string>
    <string name="button">Submit</string>
    <string name="name">What Should i call you ?</string>
    <string name="Contact">Contact Number</string>
    <string name="Add">Address</string>
    <string name="dob">Birthday</string>
    <string name="emer">Emergency Contact</string>
    //Notes Module
    <string name="action_settings_notes">Settings</string>
    <string name="title_activity_main2">NOtes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Compose Sms Activity
    <string name="_to">To</string>
    <string name="_sub">Subject</string>
    <string name="_body">Body</string>
    <string name="_send">Send</string>

    //AlarmFragment
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="with_the_task">With the task</string>
    <string name="with_the_voice_response_to_the_task">With the voice response to the task</string>
    <string name="choose_music_for_all_alarms">Choose music for all alarms</string>
    <string name="click_on_the_mic_and_reply">Click on the mic and reply</string>
    <string name="check">CHECK</string>
    <string name="todoimage_speech">TODO</string>
    <string name="txt_speech">22+34=</string>
    <string name="write_the_answer_here">Write the answer here</string>
    <string name="_22_45">22+45</string>
    <string name="check_and_stop">Check and stop</string>
    <string name="you_need_to_answer_correctly_3_times">You need to answer correctly: 3 times</string>
    <string name="text">00:00</string>
    <string name="some_info">Some info</string>
    <string name="task">With the task</string>
    <string name="voice_response">With the voice response to the task</string>
    <string name="wake_up">WAKE UP!</string>
    <string name="time">11:22</string>
    <string name="login">Login</string>
    <string name="upload_photo">Upload Photo</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Speak</string>
    <string name="voice_search">Voice Search</string>
    <string name="help">help</string>
    <string name="mail_about">For further Information, you can contact us on the following emails: unsaaslam2gmail.com janathoor@gmail.com</string>
    <string name="about_detail"><![CDATA[This system provides an Android app for users. The main target of this project are people who are either blind or have low vision. One of the main targets are socialtes, businessmen & politicians to help them ease and provide the facility to control their phone via voice.]]></string>
</resources>
