<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity"
        android:background="@color/background"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textStyle="italic"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/text"/>
        <RelativeLayout
            android:id="@+id/relatielayoutone"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:textColorHint="@color/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/nameicon"
                    android:textSize="15sp"
                    android:hint="@string/full_name"
                    android:drawableStart="@drawable/nameicon" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relatielayouttwo"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text"
                    android:drawableLeft="@drawable/email"
                    android:textSize="15sp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/email" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relatielayoutthree"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text"
                    android:drawableLeft="@drawable/padlock"
                    android:textSize="15sp"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/padlock" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relatielayoutfour"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonenumber_text_input"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonenumberET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text"
                    android:drawableLeft="@drawable/phonenoicon"
                    android:textSize="15sp"
                    android:hint="@string/phone_number"
                    android:drawableStart="@drawable/phonenoicon" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relatielayoutfive"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Address_text_input"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddressET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text"
                    android:drawablePadding="30dp"
                    android:drawableLeft="@drawable/address"
                    android:textSize="15sp"
                    android:hint="@string/address"
                    android:drawableStart="@drawable/address" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
        <CheckBox
            android:id="@+id/checkbox"
            android:textColor="@color/text"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="12sp"
            android:text="@string/i_agree_to_the_term_of_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:id="@+id/selectPhotoLL"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/photocamera"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo2" />

                <Button
                    android:id="@+id/SelectPhotoBtn"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/select_photo"
                    android:textColor="@color/text"
                    android:background="@drawable/btn_style"
                    android:layout_weight="0.9"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp">
                <Button
                    android:id="@+id/UploadPhotobtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/upload_photo"
                    android:textColor="@color/text"
                    android:background="@drawable/btn_style"
                    android:layout_marginStart="20dp" />

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/signupbtn"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_style"
            android:text="@string/signuppagebtn"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textColor="@color/text"
            android:textAllCaps="false"
            android:textSize="20sp"/>


    </LinearLayout>
</ScrollView>